# django_project

./: pyproject.toml  queries.sql  requirements.txt  some-file.txt
mysite/: db.sqlite3  devices.csv  shoapp-fixtures.json  shopapp-products-fixtures.json  shopapp-products-fixtures.xml
mysite/blogapp/: models.py  urls.py  views.py
mysite/blogapp/management/commands/: create_article.py  create_author.py
mysite/blogapp/migrations/: 0001_initial.py  0002_rename_tags_article_tegs.py
mysite/blogapp/templates/blogapp/: article-list.html  article_list.html
mysite/myapiapp/: serializers.py  urls.py  views.py
mysite/myauth/: models.py  tests.py  urls.py  views.py
mysite/myauth/management/commands/: blind_user.py
mysite/myauth/migrations/: 0001_initial.py
mysite/myauth/templates/myauth/: about-me.html  base.html  login.html  register.html
mysite/mysite/: settings.py  urls.py
mysite/request_app_data/: apps.py  forms.py  midlewares.py  urls.py  views.py
mysite/request_app_data/templates/request_app_data/: base.html  error-time-request.html  error_size_file.html  file-upload.html  (+2 more)
mysite/requestdataapp/: middlewares.py  urls.py  views.py
mysite/shopapp/: admin.py  admin_mixins.py  common.py  forms.py  models.py  serializers.py  tests.py  urls.py  views.py
mysite/shopapp/migrations/: 0001_initial.py  0002_product_created_at_product_discount_product_price.py  0003_product_archived.py  0004_order.py  0005_order_products.py  0006_order_receipt.py  0007_product_preview.py  0008_productimage.py  0009_alter_product_description_alter_product_name.py
(+25 files in other folders)
