[tool.poetry]
name = "django-project"
version = "0.1.0"
description = ""
authors = ["GusaynRizovskiy <makkks200426013@mail.ru>"]

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.6"
django-rest-framework = "^0.1.0"
django-filter = "^24.2"
django-debug-toolbar = "^4.4.2"
pillow = "^10.3.0"
gunicorn = "^22.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
